--- a/src/GUI/addressLayout.kv
+++ b/src/GUI/addressLayout.kv
@@ -26,6 +26,8 @@
         BoxLayout:
             orientation: "horizontal"
             size_hint: [1, 0.1]
+            spacing: root.width / 6
+            padding: [root.width / 6, 0]
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iPrevious.png"
