--- a/src/GUI/overviewLayout.kv
+++ b/src/GUI/overviewLayout.kv
@@ -15,19 +15,19 @@
             bold: True
             font_size: 40
             text: "Übersicht"
-        BoxLayout:
-            id: ext_navigation
-            size_hint: [1, 0.1]
-            orientation: "horizontal"
-            Button:
-                text: "Ungelesen"
-                on_press: root.switch_to("Not Read")
-            Button:
-                text: "Alle"
-                on_press: root.switch_to("All")
-            Button:
-                text: "Gesendet"
-                on_press: root.switch_to("Sent")
+        #BoxLayout:
+        #    id: ext_navigation
+        #    size_hint: [1, 0.1]
+        #    orientation: "horizontal"
+        #    Button:
+        #        text: "Ungelesen"
+        #        on_press: root.switch_to("Not Read")
+        #    Button:
+        #        text: "Alle"
+        #        on_press: root.switch_to("All")
+        #    Button:
+        #        text: "Gesendet"
+        #        on_press: root.switch_to("Sent")
         GridLayout:
             id: grid
             cols: 1
@@ -36,8 +36,8 @@
             id: int_navigation
             size_hint: [1, 0.1]
             orientation: "horizontal"
-            spacing: 100
-            padding: [100, 0]
+            spacing: root.width / 6
+            padding: [root.width / 6, 0]
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iPrevious.png"
