added number of emails being displayed and available in total

--- a/src/GUI/overviewLayout.kv
+++ b/src/GUI/overviewLayout.kv
@@ -50,3 +50,7 @@
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iNext.png"
                 on_release: root.next_page()
+            Label:
+                bold: True
+                font_size: 24
+                text: root.pageCount
