--- a/src/GUI/exitPopup.kv
+++ b/src/GUI/exitPopup.kv
@@ -1,7 +1,8 @@
 #:kivy 1.8
 
 <ExitPopup>:
-    size_hint: .5, .5
+    size_hint: [None, None]
+    size: 400, 400
     auto_dismiss: False
     title: 'Verlassen bestätigen'
     BoxLayout:
