--- a/src/GUI/deletePopupContact.kv
+++ b/src/GUI/deletePopupContact.kv
@@ -4,6 +4,9 @@
     size_hint: .5, .5
     auto_dismiss: False
     title: 'Löschen bestätigen'
+    title_color: (0,0,0,1)
+    background: "GUI/Icons/white_bg_400x400.png"
+    separator_height: 5
     BoxLayout:
         orientation: "vertical"
         Label:
