--- a/src/GUI/deletePopup.kv
+++ b/src/GUI/deletePopup.kv
@@ -10,7 +10,9 @@
     BoxLayout:
         orientation: "vertical"
         Label:
-            text: "Möchten Sie diese E-Mail wirklich löschen?"
+            font_size: 22
+            halign: "center"
+            text: "Möchten Sie diese\nE-Mail wirklich löschen?"
         AnchorLayout:
             anchor_x: "center"
             Button:
