--- a/src/GUI/deletePopupContact.kv
+++ b/src/GUI/deletePopupContact.kv
@@ -10,7 +10,9 @@
     BoxLayout:
         orientation: "vertical"
         Label:
-            text: "Möchten Sie diesen Kontakt wirklich löschen?"
+            font_size: 22
+            halign: "center"
+            text: "Möchten Sie diesen Kontakt\nwirklich löschen?"
         AnchorLayout:
             anchor_x: "center"
             Button:
