colouring every second address item grey now

--- a/src/GUI/writelayout.kv
+++ b/src/GUI/writelayout.kv
@@ -35,6 +35,11 @@
                     id: subject
                     text: ""
                     multiline: False
+            Label:
+                size_hint: [1, 0.1]
+                halign: "right"
+                bold: True
+                text: "Deine Nachricht:"
             TextInput:
                 id: mailText
                 text: ""
