--- a/src/GUI/ContactItem.kv
+++ b/src/GUI/ContactItem.kv
@@ -5,6 +5,13 @@
     color_disables: (0,0,0,1)
 
 <ContactItem>:
+    canvas:
+        Color:
+            rgba: (0, 0, 0, 0.2) if not root.grey else (0, 0, 0, 0)
+        Rectangle:
+            # self here refers to the widget i.e BoxLayout
+            pos: self.pos
+            size: self.size
     orientation: "horizontal"
     root: root
     size_hint: [1, 0.1]
