emails are marked as read now also the mails table contains a new column "remoteID" which is the message-ID given by the server

--- a/src/GUI/ContactItem.kv
+++ b/src/GUI/ContactItem.kv
@@ -16,18 +16,21 @@
     root: root
     size_hint: [1, 0.1]
     Label:
+        size_hint: [0.4, 1]
+        font_size: 16
         text: root.name
     Label:
+        font_size: 16
         text: root.email
-    Label:
-        text: root.subject
     AnchorLayout:
+        size_hint: [0.2, 1]
         align_v: "center"
         Button:
             size_hint: [None, None]
             background_normal: "GUI/Icons/iWrite.png"
             on_release: root.trigger_write_mail()
     AnchorLayout:
+        size_hint: [0.2, 1]
         align_v: "center"
         Button:
             size_hint: [None, None]
