--- a/src/GUI/EmailItem.kv
+++ b/src/GUI/EmailItem.kv
@@ -16,10 +16,16 @@
     #sizehint does not work
     size_hint: [1, None]
     Label:
+        bold: not root.read
+        font_size: 16
         text: root.name
     Label:
+        bold: not root.read
+        font_size: 16
         text: root.email
     Label:
+        bold: not root.read
+        font_size: 16
         text: root.subject
     Button:
         size_hint: [None, None]
