--- a/src/GUI/overviewLayout.kv
+++ b/src/GUI/overviewLayout.kv
@@ -49,7 +49,7 @@
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iNext.png"
-                on_release: root.next_page()
+                on_release: root.nextPage()
             Label:
                 bold: True
                 font_size: 24
