added outbox, which contains all sent emails

--- a/src/GUI/main.kv
+++ b/src/GUI/main.kv
@@ -12,8 +12,10 @@
         id: reactive_layout
         ScreenManager:
             id: screen_manager
-            OverviewLayout:
-                name: "Overview"
+            InboxLayout:
+                name: "Inbox"
+            OutboxLayout:
+                name: "Outbox"
             ReadLayout:
                 name: "Read"
             WriteLayout:
