addding addresses works now!!

--- a/src/GUI/ContactItem.kv
+++ b/src/GUI/ContactItem.kv
@@ -14,7 +14,7 @@
             size: self.size
     orientation: "horizontal"
     root: root
-    size_hint: [1, 0.1]
+    size_hint: [1, None]
     Label:
         size_hint: [0.4, 1]
         font_size: 16
