changed language back to english also made web.de sent messages available ( didn't work properly for me?)

--- a/src/GUI/addContactPopup.kv
+++ b/src/GUI/addContactPopup.kv
@@ -14,7 +14,7 @@
         orientation: "vertical"
         Label:
             font_size: 22
-            text: "Bitte geben Sie den\nNamen und die E-Mail-Adresse\ndes neuen Kontakts ein:"
+            text: "Please enter the \nname and E-Mail-Address\nof your new contact:"
             halign: "center"
         TextInput:
             id: tname
