--- a/src/GUI/addressLayout.kv
+++ b/src/GUI/addressLayout.kv
@@ -22,7 +22,7 @@
             disabled_color: (0,0,0,1)
             bold: True
             font_size: 40
-            text: "Adressbuch"
+            text: "Addresses"
         GridLayout:
             id: grid
             cols: 1
