--- a/src/GUI/deletePopup.kv
+++ b/src/GUI/deletePopup.kv
@@ -3,7 +3,7 @@
 <DeletePopup>:
     size_hint: .5, .5
     auto_dismiss: False
-    title: 'Löschen bestätigen'
+    title: 'Confirm delete'
     title_color: (0,0,0,1)
     background: "GUI/Icons/white_bg_400x400.png"
     separator_height: 5
@@ -12,7 +12,7 @@
         Label:
             font_size: 22
             halign: "center"
-            text: "Möchten Sie diese\nE-Mail wirklich löschen?"
+            text: "Are you sure you want\nto delete this e-mail?"
         AnchorLayout:
             anchor_x: "center"
             Button:
