--- a/src/GUI/exitPopup.kv
+++ b/src/GUI/exitPopup.kv
@@ -4,7 +4,7 @@
     size_hint: [None, None]
     size: 400,400
     auto_dismiss: False
-    title: 'Verlassen bestätigen'
+    title: 'Confirm exit'
     title_color: (0,0,0,1)
     #using a white background image because popup's background_color attribute changes everything BUT the popup
     background: "GUI/Icons/white_bg_400x400.png"
@@ -16,7 +16,7 @@
             Label:
                 font_size: 22
                 halign: "center"
-                text: "Möchten Sie das Programm \nwirklich verlassen?"
+                text: "Are you sure you want to\nexit this program?"
         AnchorLayout:
             anchor_x: "center"
             Button:
