--- a/src/GUI/firstStart.kv
+++ b/src/GUI/firstStart.kv
@@ -6,7 +6,7 @@
         Label:
             font_size: 34
             halign: "center"
-            text: "Bitte wählen Sie den von Ihnen\n genutzten E-Mail Anbieter:"
+            text: "Please choose your \n e-mail provider:"
         GridLayout:
             cols: 2
             # Button:
