--- a/src/GUI/outboxLayout.kv
+++ b/src/GUI/outboxLayout.kv
@@ -14,7 +14,7 @@
             size_hint: [1, 0.1]
             bold: True
             font_size: 40
-            text: "Gesendete Nachrichten"
+            text: "Sent messages"
         GridLayout:
             id: grid
             cols: 1
