--- a/src/GUI/providerDataLayout.kv
+++ b/src/GUI/providerDataLayout.kv
@@ -8,13 +8,13 @@
     padding: [20, 20]
     Label:
         font_size: 34
-        text: "Geben Sie nun Ihre Login-Informationen ein."
+        text: "Please enter your login information."
     BoxLayout:
         orientation: "horizontal"
         Label:
             font_size: 34
             size_hint: [0.5, 1]
-            text: "E-mail Adresse:"
+            text: "E-mail address:"
         TextInput:
             id: emailTxt
             size_hint: [1, None]
@@ -25,7 +25,7 @@
         Label:
             font_size: 34
             size_hint: [0.5, 1]
-            text: "Passwort:"
+            text: "Password:"
         TextInput:
             id: passwordTxt
             size_hint: [1, None]
