--- a/src/GUI/readlayout.kv
+++ b/src/GUI/readlayout.kv
@@ -13,7 +13,7 @@
             disabled_color: (0,0,0,1)
             bold: True
             font_size: 40
-            text: "Lesen"
+            text: "Read"
         BoxLayout:
             orientation: "vertical"
             BoxLayout:
@@ -22,14 +22,14 @@
                 Label:
                     size_hint: [0.2, 1]
                     bold: True
-                    text: "Absender:"
+                    text: "Sender:"
                 TextInput:
                     id: sender
                     text: ""
                 Label:
                     size_hint: [0.2, 1]
                     bold: True
-                    text: "Thema:"
+                    text: "Topic:"
                 TextInput:
                     id: subject
                     text: ""
