added Icons for In/Outbox any suggestions for Icons for "All messages" and "not Read Messages"?

--- a/src/GUI/menuLayout.kv
+++ b/src/GUI/menuLayout.kv
@@ -19,14 +19,14 @@
                 Button:
                     id: overBtn
                     size_hint: [None, None]
-                    background_normal: "GUI/Icons/iOverview.png"
+                    background_normal: "GUI/Icons/iInbox.png"
                     on_release: root.parent.show_layout("Inbox")
             BoxLayout:
                 padding: 25
                 Button:
                     id: inboxBtn
                     size_hint: [None, None]
-                    background_normal: "GUI/Icons/iOverview.png"
+                    background_normal: "GUI/Icons/iOutbox.png"
                     on_release: root.parent.show_layout("Outbox")
             BoxLayout:
                 padding: 25
